// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Button Component correctly 1`] = `
<button
  className="sc-bdVaJa dXWeiC"
  color={undefined}
  disabled={undefined}
  onClick={[Function]}
  scale={undefined}
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 2`] = `
<button
  className="sc-bdVaJa erThFv"
  color="error"
  disabled={undefined}
  onClick={[Function]}
  scale="l"
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 3`] = `
<button
  className="sc-bdVaJa sNwzb"
  color="error"
  disabled={undefined}
  onClick={[Function]}
  scale="l"
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 4`] = `
<button
  className="sc-bdVaJa jfztGI"
  color="error"
  disabled={undefined}
  onClick={[Function]}
  scale="l"
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 5`] = `
<button
  className="sc-bdVaJa kccMeH"
  color="error"
  disabled={undefined}
  onClick={[Function]}
  scale="l"
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 6`] = `
<button
  className="sc-bdVaJa cJHnCZ"
  color={undefined}
  disabled={undefined}
  onClick={[Function]}
  scale={undefined}
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 7`] = `
<button
  className="sc-bdVaJa cyXDoQ"
  color={undefined}
  disabled={undefined}
  onClick={[Function]}
  scale={undefined}
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 8`] = `
<button
  className="sc-bdVaJa clfdPw"
  color={undefined}
  disabled={undefined}
  onClick={[Function]}
  scale={undefined}
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 9`] = `
<button
  className="sc-bdVaJa gxeCWE"
  color={undefined}
  disabled={true}
  onClick={[Function]}
  scale={undefined}
  type={undefined}
>
  TEST
</button>
`;
